test_suite/alan-2022-examples/failing/002290_mutation.alan
source x begin get k4 boolean[1] end
